# tree-sitter-hg-commit

./: Cargo.toml  README.md  binding.gyp  grammar.js  package-lock.json  package.json
.github/workflows/: generate-parser.yml
bindings/node/: binding.cc  index.js
bindings/rust/: lib.rs
corpus/: test.txtt
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
