[package]
name = "tree-sitter-hg-commit"
description = "hg-commit grammar for the tree-sitter parsing library"
version = "0.0.1"
keywords = ["incremental", "parsing", "hg-commit"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-hg-commit"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20.10"

[build-dependencies]
cc = "1.0"
